# TrueCompMath

./: .gitignore  CMakeLists.txt  README.md
graphs/data_computing/: data_CubicSpline.cpp  data_DerivativeCoef.cpp  data_HermiteInterpolator.cpp  data_integrate.cpp
graphs/python_making_graphs/: graph_CubicSpline.py  graph_DerivativeCoef.py  graph_HermiteInterpolator.py  graph_integrate.py
my_labs/: CMakeLists.txt
my_labs/src/: CMakeLists.txt
my_labs/src/labs/CubicSpline/: CubicSpline.h
my_labs/src/labs/DerivativeCoef/: DerivativeCoef.h
my_labs/src/labs/HermiteInterpolator/: HermiteInterpolator.h
my_labs/src/labs/integrate/: integrate.h
my_labs/tests/: CMakeLists.txt  test_CubicSpline.cpp  test_DerivativeCoef.cpp  test_HermiteInterpolator.cpp  test_integrate.cpp
